Fix bugs on linecomment
- fixes a bug that empty line is invisible
- fixes a bug that lineNumber starts from 0
- fixes a bug that linefeedback popup closing function throws an unexcepted error

--- a/src/app/study/[studyId]/share/commentableCodeViewer.module.scss
+++ b/src/app/study/[studyId]/share/commentableCodeViewer.module.scss
@@ -1,6 +1,8 @@
 .code {
   .line {
+    min-height: 1.6em;
     white-space: pre;
+    display: block;
     &.add {
       background-color: #ccffad80;
     }
